--- a/TemplateEngines/Pug/Partials/head.pug
+++ b/TemplateEngines/Pug/Partials/head.pug
@@ -1,7 +1,10 @@
 doctype html
-html(lang='en')
-body
+html
 head
-    title Pug Template
-    style
-        include ../Partials/style.css
+    meta(name='viewport', content='width=device-width')
+    link(rel="stylesheet", type="text/css", href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css")
+    title= subject
+    style 
+        include style.css
+body
+        
