--- a/TemplateEngines/EJS/Templates/index.ejs
+++ b/TemplateEngines/EJS/Templates/index.ejs
@@ -14,15 +14,15 @@
     <h1>This is great</h1>
     <p>Welcome to templating using EJS</p>
 
-    <h2>Variable</h2>
-    <p><%= tagline %></p>
+    <h2>Passed Value In Redering</h2>
+    <p><%= line %></p>
 
     <ul>
-      <% mascots.forEach(function(mascot) { %>
+      <% users.forEach(function(user) { %>
         <li>
-          <strong><%= mascot.name %></strong>
-          representing <%= mascot.organization %>,
-          born <%= mascot.birth_year %>
+          <strong><%= user.name %></strong>
+          representing <%= user.company %>,
+          born <%= user.age %>
         </li>
       <% }); %>
     </ul>
